# duffing

./: README.md  core.py  curvature.py  duffing.py  fix.py  hbf.py  homoclinic.py  manifold.py  requirements.txt  setup.cfg  traj.py
.github/workflows/: deploy_docs.yaml
docs/: Makefile  conf.py  index.rst
docs/_apidocs/: fix.rst  hbf.rst  homoclinic.rst  manifold.rst  modules.rst  traj.rst
duffing/: core.py  fix.py  hbf.py  henon.py  homoclinic.py  manifold.py  out.json  system.py  traj.py
duffing/json/: 01.json  01_poin.csv  02.json  02_stable_mani1.csv  02_unstable_mani0.csv  02_unstable_mani1.csv  03.json  04_hbf.json  05.json  05_stable_mani1.csv  ex01_fix.json  h01.json  h01_fix.json  h01_stable_mani0.csv  h01_stable_mani1.csv  h01_unstable_mani0.csv  h01_unstable_mani1.csv  h02.json  h02_fix.json  h02_stable_mani0.csv  h02_stable_mani1.csv  h02_unstable_mani0.csv  h02_unstable_mani1.csv  h03.json  h03_fix.json  h03_stable_mani0.csv  h03_stable_mani1.csv  h03_unstable_mani0.csv  h03_unstable_mani1.csv
json/: 01.json  01_traj.csv  02.json  02_stable_mani.csv  02_stable_mani0.csv  02_unstable_mani0.csv  02_unstable_mani1.csv  03.json  04.json  04_stable_mani0.csv  04_stable_mani1.csv  04_unstable_mani0.csv  04_unstable_mani1.csv  05.json  05_stable_mani0.csv  05_unstable_mani0.csv  05_unstable_mani1.csv  ex01.json
