[metadata]
name = duffing_homoclinic_analysis
version = 0.1.0
author = Yuu Miino
description = A package for analyzing the homoclinic orbits of the Duffing oscillator.
long_description = file: README.md
keywords = duffing, homoclinic, analysis
license = MIT

[options]
package_dir=
    =duffing
packages = find:
python_requires = >=3.12
install_requires =
    numpy
    scipy
    matplotlib

[options.packages.find]
where=duffing